update gitignore to not track orderSys.properties

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,8 @@ nb-configuration.xml
 ## OS X
 ##########################
 .DS_Store
+
+##########################
+## Program Properties
+##########################
+orderSys.properties
