don't track further DB changes

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,8 @@ nb-configuration.xml
 ## Program Properties
 ##########################
 orderSys.properties
+
+##########################
+## Database
+##########################
+database.json
